# kaartmaker

./: .gitignore  README.md  download_geojson.py  download_geojson.sh  pyproject.toml
.github/workflows/: python-publish.yml
examples/: README.md
kaartmaker/: __init__.py  constants.py  country_labels.py  help_text.py  labeling.py  plotly.py  process_dataset.py  world_palestine_votes_minus_unknown.csv
kaartmaker/config/: boundaries.json  country_labels.json  legend.json
kaartmaker/datasets/: source.yaml  world_palestine_votes.csv  world_palestine_votes_minus_unknown.csv  world_unrwa_votes.csv
kaartmaker/datasets/UNRWA/: world_unrwa_funding.csv
kaartmaker/datasets/UN_general_assembly/: source.yaml  world_palestine_votes.csv  world_unrwa_votes.csv
kaartmaker/datasets/UN_general_assembly/israel_ceasefire/: world_palestine_votes.csv
kaartmaker/datasets/UN_general_assembly/russia_ceasefire/: source.yml  world_ukraine_votes.csv
