[tool.poetry]
name        = "kaartmaker"
version     = "0.1.2"
description = "world map making tool based on votes from locations such as the UN"
authors     = ["Jesse Hitch <jessebot@linux.com>"]
license     = "AGPL-3.0-or-later"
readme      = "README.md"
packages    = [{include = "kaartmaker"}]
include     = [
    "./kaartmaker/datasets/UN_general_assembly/israel_ceasefire/world_palestine_votes.csv",
    "./kaartmaker/datasets/UN_general_assembly/russia_ceasefire/world_ukraine_votes.csv",
    "./kaartmaker/config/legend.json",
    "./kaartmaker/config/boundaries.json",
    "./kaartmaker/config/country_labels.json",
    "./kaartmaker/geojson/world.geojson",
    "./kaartmaker/geojson/world_subunits.geojson"
]
keywords      = ["geopandas", "maps", "mapmaking", "kaartmaker", "UN"]
classifiers   = ["Development Status :: 3 - Alpha",
                 "Programming Language :: Python :: 3.12",
                 "Operating System :: MacOS :: MacOS X",
                 "Operating System :: POSIX :: Linux",
                 "Intended Audience :: End Users/Desktop",
                 "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]

[tool.poetry.urls]
"Bug Tracker" = "http://github.com/small-hack/kaartmaker/issues"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
seaborn = "^0.13.2"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
pyqt5-sip = "^12.11.1"
plotly = "^5.20.0"
click = "^8.1.7"
rich = "^13.7.0"
fake-useragent = "^1.5.0"

[tool.poetry.plugins."kaartmaker.application.plugin"]
"kaartmaker" = "kaartmaker:main"

[tool.poetry.scripts]
kaartmaker = "kaartmaker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
